--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -21,7 +21,7 @@
     <header class="ethio-header">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="{% trans 'Home' %}">
-                <span class="logo-text">POULTRY</span>
+                <span class="logo-text">{% trans "POULTRY" %}</span>
             </a>
             
             <nav aria-label="{% trans 'Main navigation' %}">
