--- a/contact/templates/contact/contact_us.html
+++ b/contact/templates/contact/contact_us.html
@@ -1,3 +1,4 @@
+<!-- contact\contact_us.html -->
 {% extends 'base/base.html' %}
 {% load i18n %}
 {% load static %}
@@ -7,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="contact-container"></div>
+<div class="contact-container">
   <h1 class="contact-title">{% trans "Get in Touch" %}</h1>
   <p class="contact-description">{% trans "We would love to hear from you. Please fill out the form below and we will get back to you as soon as possible." %}</p>
   
@@ -20,6 +21,10 @@
     <div class="form-group">
       <label for="id_email">{% trans "Your Email" %}</label>
       {{ form.email|add_class:"form-control" }}
+    </div>
+    <div class="form-group">
+      <label for="id_subject">{% trans "Subject" %}</label>
+      {{ form.subject|add_class:"form-control" }}
     </div>
     <div class="form-group">
       <label for="id_message">{% trans "Your Message" %}</label>
