--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <main class="main-container">
-    <!-- Hero Section -->
+     <!-- Hero Section -->
      <div class="language-selector">
     <div class="language-container">
         <form action="/i18n/setlang/" method="post" id="language-form">
@@ -31,7 +31,10 @@
                 </button>
             </div>
         </form>
+        <div class="date-and-time"></div>
     </div>
+
+
 </div>
     <section id="heroSection" class="main-hero-section">{% trans "Empowering Ethiopia's Poultry Farmers with Fairness & Growth" %}
         <h1></h1>
