--- a/base/static/base/css/index.css
+++ b/base/static/base/css/index.css
@@ -13,8 +13,24 @@ body {
   color: var(--dark-color);
   margin: 0;
   padding: 0;
-  background: linear-gradient(135deg, #f5f5f5 60%, #e3f2fd 100%);
+  animation: animated-bg 12s ease-in-out infinite alternate;
+  background: linear-gradient(to right, #3d054b48 60%, #0638295e 100%);
   min-height: 100vh;
+}
+
+@keyframes animated-bg {
+  0% {
+    background: linear-gradient(to right, #4c005f7c 60%, #06382980 100%);
+  }
+  25% {
+    background: linear-gradient(to right, #0b386680 60%, #88680780 100%);
+  }
+  50% {
+    background: linear-gradient(to right, #3d054b7c 60%, #005c407e 100%);
+  }
+  75% {
+    background: linear-gradient(to right, #613f007a 60%, #5a12007a 100%);
+  }
 }
 
 /* Language Selector */
@@ -295,6 +311,30 @@ h2 {
     margin-top: 16px;
     font-size: 1rem;
   }
+
+  .date-and-time {
+  display: inline-block;
+  margin:0;
+  padding: 0 0.5rem;
+  font-size: 0.71rem;
+  font-family: var(--font-main);
+  font-weight: 600;
+  font-style: italic;
+  text-align: center;
+  color: #ffd900;
+  background: #222222b2;
+  border: 2px solid #1976d2;
+  border-radius: 8px;
+  letter-spacing: 0; 
+  box-shadow: 0 4px 10px rgba(25, 118, 210, 0.493);
+  transition: background 0.2s, color 0.2s;
+  text-decoration: none;
+}
+
+.date-and-time:hover {
+    background: #e3f2fd;
+    color: #222;
+}
 }
 
 @media (max-width: 768px) {
@@ -327,4 +367,54 @@ h2 {
     min-width: 90vw;
     padding: 10px 4px;
   }
+  .date-and-time {
+  display: inline-block;
+  margin:0 1rem;
+  padding: 0 ;
+  font-size: 0.71rem;
+  font-family: var(--font-main);
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  color: #09ff01;
+  background: #222222b2;
+  border: 3px solid #1976d2;
+  border-radius: 18px;
+  letter-spacing: 0; /*  */
+  box-shadow: 0 4px 10px rgb(0, 102, 68);
+  transition: background 0.2s, color 0.2s;
+  text-decoration: none;
+}
+
+.date-and-time:hover {
+    background: #e3f2fd;
+    color: #222;
+}
+}
+
+
+
+
+
+.date-and-time {
+  margin:0;
+  padding: 0 0.5rem;
+  font-size: 0.71rem;
+  font-family: var(--font-main);
+  font-weight: 600;
+  font-style: italic;
+  text-align: center;
+  color: #f00202ef;
+  background: #222222b2;
+  border: 2px solid #1976d2;
+  border-radius: 8px;
+  letter-spacing: 0; 
+  box-shadow: 0 4px 10px rgba(25, 118, 210, 0.493);
+  transition: background 0.2s, color 0.2s;
+  text-decoration: none;
+}
+
+.date-and-time:hover {
+    background: #e3f2fd;
+    color: #222;
 }
