--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -15,7 +15,8 @@
     <div class="language-container">
         <form action="/i18n/setlang/" method="post" id="language-form">
             {% csrf_token %}
-            <input name="next" type="hidden" value="{{ request.path }}">
+            <input name="next" type="hidden" value="{{ request.get_full_path|default:'/' }}">
+
             <div class="language-btn-group" role="group">
                 <button type="submit" name="language" value="en" 
                         class="language-btn en {% if LANGUAGE_CODE == 'en' %}active{% endif %}">
