--- a/base/templates/base/admin_links.html
+++ b/base/templates/base/admin_links.html
@@ -19,7 +19,7 @@
 
 {% if request.user.is_authenticated %}
     <div class="user-info">
-        <p>thank you {{ request.user.username }} </p>
+        <p>Thank you {{ request.user.username }} . But you are not a supper user !!!</p>
         <h1>message</h1>
         
     </div>
