--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -26,7 +26,7 @@
             <small>Format: +251 9...</small>
         </div>
 
-        <button type="submit" class="btn btn-primary">{% trans "Register" %}</button>
+        <button type="submit" class="registerbtn">{% trans "Register" %}</button>
     </form>
 
     <div class="login-link">
