--- a/users/static/users/css/profile.css
+++ b/users/static/users/css/profile.css
@@ -1,10 +1,10 @@
 .profile-container {
     max-width: 600px;
     margin: 50px auto;
-    background: #fff;
+    background: linear-gradient(130deg, rgba(171, 255, 154, 0.5) , rgba(236, 216, 179, 0.479) ,  rgba(179, 227, 236, 0.466));
     padding: 20px 30px;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.514);
 }
 
 .profile-header {
