--- a/users/static/users/css/seller_profile.css
+++ b/users/static/users/css/seller_profile.css
@@ -3,12 +3,14 @@
     justify-content: center;
     align-items: flex-start;
     margin-top: 40px;
+    
 }
 .seller-profile-card {
-    background: #fff;
+    box-shadow: 5px 5px 20px #1b1313;
+    background: linear-gradient(130deg, #ffffff, #f1f1f1, #dddddd, #cccccc, #818181);
     border-radius: 12px;
-    box-shadow: 0 2px 16px rgba(0,0,0,0.07);
-    padding: 32px 28px;
+    padding: 20px;
+    margin: 0 10px 50px 10px;
     max-width: 400px;
     width: 100%;
     text-align: center;
