--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,7 +13,7 @@
 
     <div class="profile-header">
         <img src="{{ user.profile.profile_picture.url }}" alt="{% trans 'Profile Picture' %}" class="profile-picture">
-        <h3>{{ user.profile.user_name|default:user.username }}</h3>
+        <h3>{{ user.profile.username|default:user.username }}</h3>
     </div>
 
     <div class="profile-details">
@@ -24,7 +24,7 @@
     </div>
 
     <div class="profile-actions">
-        <a href="{% url 'users:profile-update' %}" class="btn btn-primary">{% trans "Edit Profile" %}</a>
+        <a href="{% url 'users:profile_update' %}" class="btn btn-primary">{% trans "Edit Profile" %}</a>
     </div>
 </div>
 {% endblock %}
