--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -7,76 +7,68 @@
 {% endblock %}
 
 {% block content %}
-<div class="profile-update-container">
-    <h2>{% trans "Update Your Profile" %}</h2>
+<div class="simple-profile_update">
+    <h2>{% trans "Update Profile" %}</h2>
 
     {% if form.errors %}
-    <div class="alert alert-danger">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-        </svg>
-        {% trans "Please correct the errors below." %}
+    <div class="error-message">
+        ⚠️ {% trans "Please correct the errors below." %}
     </div>
     {% endif %}
 
-    <form method="post" enctype="multipart/form-data" class="profile-form">
+    <form method="post" enctype="multipart/form-data" class="simple-form">
         {% csrf_token %}
         {{ form.non_field_errors }}
 
-        <div class="form-group">
-            <label>{% trans "Registered Phone Number:" %}</label>
-            <div class="form-control-plaintext">
-                {{ user.phone_number }}
-            </div>
-            <small class="text-muted">{% trans "Contact support to change your phone number" %}</small>
+        <div class="form-row">
+            <label>{% trans "Phone Number:" %}</label>
+            <div class="readonly-field">{{ user.phone_number }}</div>
+            <small>{% trans "Contact support to change phone number" %}</small>
         </div>
 
-        <div class="form-group">
+        <div class="form-row">
             <label>{{ form.profile_picture.label }}</label>
             {% if form.instance.profile_picture %}
-                <div class="avatar-container">
-                    <img src="{{ form.instance.profile_picture.url }}" 
-                         alt="Current Profile Picture" class="current-avatar">
-                    <div class="file-upload">
-                        <label for="id_profile_picture" class="file-upload-label">
-                            {% trans "Change Photo" %}
-                        </label>
+                <div class="avatar-preview">
+                    <img src="{{ form.instance.profile_picture.url }}" alt="Current Profile" id="profile-picture-preview">
+                    <label class="change-photo-btn">
+                        {% trans "Change" %}
                         {{ form.profile_picture }}
-                    </div>
+                    </label>
                 </div>
             {% else %}
-                <div class="file-upload">
-                    <label for="id_profile_picture" class="file-upload-label">
+                <div class="avatar-preview">
+                    <img src="https://res.cloudinary.com/your-cloud-name/image/upload/v1612469403/kvtec0mqxawgxmhsaamd.jpg" 
+                         alt="Default Profile" 
+                         id="profile-picture-preview">
+                    <label class="upload-photo-btn">
                         {% trans "Upload Photo" %}
+                        {{ form.profile_picture }}
                     </label>
-                    {{ form.profile_picture }}
                 </div>
             {% endif %}
             {{ form.profile_picture.errors }}
         </div>
 
-        <div class="form-group">
-            <label for="id_user_name">{{ form.user_name.label }}</label>
-            {{ form.user_name }}
-            {{ form.user_name.errors }}
+        <div class="form-row">
+            <label for="id_username">{{ form.username.label }}</label>
+            {{ form.username }}
+            {{ form.username.errors }}
         </div>
 
-        <div class="form-group">
+        <div class="form-row">
             <label for="id_bio">{{ form.bio.label }}</label>
             {{ form.bio }}
             {{ form.bio.errors }}
         </div>
 
-        <div class="form-group">
+        <div class="form-row">
             <label for="id_location">{{ form.location.label }}</label>
             {{ form.location }}
             {{ form.location.errors }}
         </div>
 
-        <button type="submit" class="btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
-            </svg>
+        <button type="submit" class="save-btn">
             {% trans "Save Changes" %}
         </button>
     </form>
