--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -22,10 +22,10 @@
     <div class="top-bar">
         <div class="container">
             <div class="top-bar-content">
-                <div class="date-and-time">
-                    <li><i class="fas fa-clock"></i> <span class="live-clock">{{ now|date:"Y-m-d H:i" }}</span></li>
-                </div>
                 <div class="top-links">
+                     <a>
+                    <li><i class="fas fa-clock"></i> <span class="live-clock">{{ now|date:"Y-m-d H:i" }}</span></li>
+                <a>
                     <a href="{% url 'contact:contact_us' %}"><i class="fas fa-headset" aria-hidden="true"></i> Help Center</a>
                     <a href="#"><i class="fas fa-truck" aria-hidden="true"></i> Track Order</a>
                     <a href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
@@ -41,9 +41,9 @@
                 <div class="logo">
                     <a href="/" aria-label="Home">
                         <span class="logo-icon"><i class="fas fa-store" aria-hidden="true"></i></span>
-                        <span class="logo-text">Market<span>Hub</span></span>
+                        <span class="logo-text">Sheger<span class="hub">city</span></span>
                     </a>
-                </div>
+                </div>c
 
                 <div class="search-bar">
                     <form action="#" role="search">
@@ -158,7 +158,7 @@
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
-                </div>
+                </div> 
                 <div class="footer-column">
                     <h4 class="footer-title">Categories</h4>
                     <ul class="footer-links">
