--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -43,7 +43,7 @@
                         <span class="logo-icon"><i class="fas fa-store" aria-hidden="true"></i></span>
                         <span class="logo-text">Sheger<span class="hub">city</span></span>
                     </a>
-                </div>c
+                </div>
 
                 <div class="search-bar">
                     <form action="#" role="search">
